WIP started working on html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<script type="text/javascript" src="main.js"></script>
-	</head>
-	
-	
-	
-	
+<head>
+    <link rel="stylesheet" href="chatbox.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+    <script type="text/javascript" src="main.js"></script>
+</head>
+    <body>
+        <h1>Equipe 18 -- TD2</h1>
+        <div class="windowBoard">
+            <div class="fullboard">
+                <div class="topBanner">
+                    <div class="topBanner appNameBox">
+                        namebox
+                        <i class="fas fa-users"></i>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </body>
 </html>
