completed top banner and channel box

--- a/index.html
+++ b/index.html
@@ -7,16 +7,58 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
     <body>
-        <h1>Equipe 18 -- TD2</h1>
+        <h2>Equipe 18 -- TD2</h2>
         <div class="windowBoard">
             <div class="fullboard">
                 <div class="topBanner">
                     <div class="topBanner appNameBox">
                         namebox
                         <i class="fas fa-users"></i>
+                    </div>
+                    <div class="topBanner topBannerIconBoxContainer">
+                        <div class="iconBox">
+                            <i class="far fa-user"></i>
+                            <p>username</p>
+                        </div>
+                        <div class="iconBox">
+                            <i class="far fa-bell"></i>
+                            <p></p>
+                        </div>
+                        <div class="iconBox">
+                            <i class="fas fa-globe"></i>
+                            <p></p>
+                        </div>
+                        <div class="iconBox">
+                            <i class="fas fa-cog"></i>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="chatAppBoard">
+                    <div class="chatTextViewBoard">
+                        <div class="chatTextBanner">
+                            </div>
+
+                        </div>
+                    <div class="chatChannelViewBoard">
+                        <div class="chatChannelBanner">
+
+                        </div>
+                        <div class="chatChannelBoardContainer">
+                            <div class="chatChannelBoard">
+                                test1
+                            </div>
+                            <div class="chatChannelBoard">
+                                test2
+                            </div>
+                            <div class="chatChannelBoard">
+                                test3
+                            </div>
+                        </div>
 
                     </div>
                 </div>
+
             </div>
         </div>
 
