--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <link rel="stylesheet" href="chatbox.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+	<script type="text/javascript" src="message.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </head>
     <body>
+		<input type="button" onclick="test()"/>
         <h2>Equipe 18 -- TD2</h2>
         <div class="windowBoard">
             <div class="fullboard">
@@ -36,12 +38,12 @@
                 </div>
                 <div class="chatAppBoard">
                     <div class="chatTextViewBoard">
-                        <div class="chatTextBanner">
+                        <div class="chatBanner">
                             </div>
 
                         </div>
                     <div class="chatChannelViewBoard">
-                        <div class="chatChannelBanner">
+                        <div class="chatBanner">
 
                         </div>
                         <div class="chatChannelBoardContainer">
