worked on the channel boards interface

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
     <body>
-		<input type="button" onclick="test()"/>
         <h2>Equipe 18 -- TD2</h2>
         <div class="windowBoard">
             <div class="fullboard">
@@ -52,13 +51,22 @@
                         </div>
                         <div class="chatChannelBoardContainer">
                             <div class="chatChannelBoard">
-                                test1
+                                <div class="channelIconBox">
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <p>General</p>
+                            </div>
+                            <div class="chatChannelBoard" style=" background-color: #EEEEEE">
+                                <div class="channelIconBox">
+                                    <i class="fas fa-minus"></i>
+                                </div>
+                                <p>Channel 1</p>
                             </div>
                             <div class="chatChannelBoard">
-                                test2
-                            </div>
-                            <div class="chatChannelBoard">
-                                test3
+                                <div class="channelIconBox">
+                                    <!-- remove the style of the div -->
+                                    <i class="fas fa-plus" style = "color: #5F9EA0"></i>                                    </div>
+                                <p>Channel 2</p>
                             </div>
                         </div>
                     </div>
