created first version for the messages

--- a/index.html
+++ b/index.html
@@ -41,10 +41,19 @@
                     </div>
                 </div>
                 <div class="chatAppBoard">
-                    <div class="chatTextViewBoard">
+                    <div id="chat"class="chatTextViewBoard">
                         <div class="chatBanner">
                             <p>Groupe Actif: </p>
                         </div>
+						<div class="row">
+							<div class="name"> elie </div>
+							<div class="receivedMsg"> hi my name is jeff </div>
+							<div class="dateRcvd"> lundi 12.04:14</div>
+						</div>
+						<div class="row">
+							<div class="sentMsg"> hi jeff no one cares </div>
+							<div class="dateSent"> lundi 12.04:14</div>
+						</div>
                     </div>
                     <div class="chatChannelViewBoard">
                         <div class="chatBanner">
