--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
     <body>
+	<input type="button" onclick ="test()"/>
         <h2>Equipe 18 -- TD2</h2>
         <div class="windowBoard">
             <div class="fullboard">
