--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
                     </div>
                 </div>
                 <div class="chatAppBoard">
-                    <div id="chat"class="chatTextViewBoard">
+                    <div class="chatTextViewBoard">
                         <div class="chatBanner">
                             <p>Groupe Actif: </p>
                         </div>
+						<div id="chat"class="scrollingBar">
 						<div class="row">
 							<div class="name"> elie </div>
 							<div class="receivedMsg"> hi my name is jeff </div>
@@ -53,6 +54,7 @@
 						<div class="row">
 							<div class="sentMsg"> hi jeff no one cares </div>
 							<div class="dateSent"> lundi 12.04:14</div>
+						</div>
 						</div>
                     </div>
                     <div class="chatChannelViewBoard">
