WIP added input field

--- a/index.html
+++ b/index.html
@@ -45,17 +45,27 @@
                         <div class="chatBanner">
                             <p>Groupe Actif: </p>
                         </div>
-						<div id="chat"class="scrollingBar">
-						<div class="row">
-							<div class="name"> elie </div>
-							<div class="receivedMsg"> hi my name is jeff </div>
-							<div class="dateRcvd"> lundi 12.04:14</div>
-						</div>
-						<div class="row">
-							<div class="sentMsg"> hi jeff no one cares </div>
-							<div class="dateSent"> lundi 12.04:14</div>
-						</div>
-						</div>
+                        <div class="chatViewBox">
+                            <div id="chat"class="chatTextBox">
+                                <div class="row">
+                                    <div class="name"> elie </div>
+                                    <div class="receivedMsg"> hi my name is jeff </div>
+                                    <div class="dateRcvd"> lundi 12.04:14</div>
+                                </div>
+                                <div class="row">
+                                    <div class="sentMsg"> hi jeff no one cares </div>
+                                    <div class="dateSent"> lundi 12.04:14</div>
+                                </div>
+                            </div>
+                            <div class="chatInputBoard" >
+                                <div class="chatInputBox">
+                                    <div class="chatInputThumbsUpBox">
+                                        <i class="far fa-thumbs-up"></i>
+                                    </div>
+                                    <input styl="text">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="chatChannelViewBoard">
                         <div class="chatBanner">
@@ -68,6 +78,7 @@
                                 </div>
                                 <p>General</p>
                             </div>
+                            <!-- TODO: remove the style of the div -->
                             <div class="chatChannelBoard" style=" background-color: #EEEEEE">
                                 <div class="channelIconBox">
                                     <i class="fas fa-minus"></i>
@@ -76,8 +87,9 @@
                             </div>
                             <div class="chatChannelBoard">
                                 <div class="channelIconBox">
-                                    <!-- remove the style of the div -->
-                                    <i class="fas fa-plus" style = "color: #5F9EA0"></i>                                    </div>
+                                    <!-- TODO: remove the style of the div -->
+                                    <i class="fas fa-plus" style = "color: #5F9EA0"></i>                                    
+                                </div>
                                 <p>Channel 2</p>
                             </div>
                         </div>
