completed input field

--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
                                     <div class="chatInputThumbsUpBox">
                                         <i class="far fa-thumbs-up"></i>
                                     </div>
-                                    <input styl="text">
+                                    <!--
+                                    <input type="text" name="messageInput" placeholder="Votre message ici">
+                                    -->
+                                    <textarea id="messageInput" placeholder="Votre message ici..."></textarea>
+                                    <div class="chatSendBox" onclick="inputTest()">
+                                        Envoyer
+                                    </div>
                                 </div>
                             </div>
                         </div>
