--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="main.js"></script>
     <meta charset="UTF-8">
 </head>
-    <body>
+    <body onload="main()">
 	<input type="button" onclick ="test()"/>
         <h2>Equipe 18 -- TD2</h2>
         <div class="windowBoard">
@@ -24,7 +24,7 @@
                     <div class="topBanner topBannerIconBoxContainer">
                         <div class="iconBox">
                             <i class="far fa-user"></i>
-                            <p>username</p>
+                            <p id="usernameText">username</p>
                         </div>
                         <div class="iconBox">
                             <i class="far fa-bell"></i>
