added the changing the name of the current channel in the chat banner

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                 <div class="chatAppBoard">
                     <div class="chatTextViewBoard">
                         <div class="chatBanner">
-                            <p>Groupe Actif: </p>
+                            <p>Groupe Actif: </p> <br>
+                            <div class="chatBannerActiveGroup">
+                                <h2 id="groupeActif">test</h2>
+                            </div>
                         </div>
                         <div class="chatViewBox">
                             <div id="chat"class="chatTextBox">
