added function to leave a channel along with multiple minor ajusements

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                         <i class="far fa-thumbs-up"></i>
                                     </div>
                                     <textarea id="messageInput" placeholder="Votre message ici..."></textarea>
-                                    <div class="chatSendBox" onclick="inputTest()">
+                                    <div class="chatSendBox" onclick="sendMessage()">
                                         Envoyer
                                     </div>
                                 </div>
