--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="chatBanner">
                             <p>Groupe Actif: </p> <br>
                             <div class="chatBannerActiveGroup">
-                                <h2 id="groupeActif">test</h2>
+                                <h2 id="groupeActif"></h2>
                             </div>
                         </div>
                         <div class="chatViewBox">
