added sound when we receive a new message in the current channel

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script type="text/javascript" src="main.js"></script>
     <meta charset="UTF-8">
 </head>
-    <body onload="updateUsername()">
+    <body onload="updateUsername()"
         <h2>Equipe 18 -- TD2</h2>
         <div class="windowBoard">
             <div class="fullboard">
                 <div class="topBanner">
-                    <div class="appNameBox">
+                    <div onclick="location.reload()" class="appNameBox">
                         <img src="PolyChat.png" />
                     </div>
                     <div class="topBanner topBannerIconBoxContainer">
