added tooltip and function to desactivate sound

--- a/index.html
+++ b/index.html
@@ -72,31 +72,16 @@
                                     <i class="fas fa-plus"></i>
                                 </div>
                                 <div class="chatBannerIconBox">
+                                    <div class="tooltipContainer">
+                                       <div>Son desactive:</div> 
+                                       <div><input type="checkbox" onclick="changeSoundSetting()"></div>
+                                    </div>
                                     <i class="fas fa-cog"></i>
+                                    
                                 </div>
                             </div>
                         </div>
                         <div id="channels" class="chatChannelBoardContainer">
-                           <!-- <div class="chatChannelBoard">
-                                <div class="channelIconBox">
-                                    <i class="fas fa-star"></i>
-                                </div>
-                                <p>General</p>
-                            </div>
-                            // TODO: remove the style of the div 
-                            <div class="chatChannelBoard" style=" background-color: #EEEEEE">
-                                <div class="channelIconBox">
-                                    <i class="fas fa-minus"></i>
-                                </div>
-                                <p>Channel 1</p>
-                            </div>
-                            <div class="chatChannelBoard">
-                                <div class="channelIconBox">
-                                    // TODO: remove the style of the div 
-                                    <i class="fas fa-plus" style = "color: #5F9EA0"></i>                                    
-                                </div>
-                                <p>Channel 2</p>
-                            </div>-->
                         </div>
                     </div>
                 </div>
