removed href from icon

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <img src="PolyChat.png" />
                     </div>
                     <div class="topBanner topBannerIconBoxContainer">
-                        <div class="iconBox" onclick="location.reload()">
+                        <div class="iconBox">
                             <i class="far fa-user"></i>
                             <p id="usernameText">username</p>
                         </div>
