added code to update unread msgs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="iconBox">
                             <i class="far fa-bell"></i>
-                            <p></p>
+                            <p id="unreadMsgs"></p>
                         </div>
                         <div class="iconBox">
                             <i class="fas fa-globe"></i>
